# simbotic-cortex

./: .gitignore  .gitmodules  Dockerfile.cpu  Dockerfile.gpu  README.md  bashrc  roslaunch.sh
AirSim/app/: CMakeLists.txt
AirSim/scripts/: airsim  hello_drone.py  segmentation.py
PX4/: run.sh
PX4/scripts/: simple.py
